# liars-dice-rs

./: Cargo.toml  README.md
liars-dice-lib/: Cargo.toml
liars-dice-lib/src/: lib.rs  test.rs
liars-dice-lib/src/state/: mod.rs
liars-dice-ratatui/: Cargo.toml
liars-dice-ratatui/src/: main.rs  model.rs  tuirealm_data.rs
liars-dice-ratatui/src/components/: choice_panel.rs  mod.rs  player_table.rs
