[package]
name = "liars-dice-ratatui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets", "document-features", "macros", "palette", "scrolling-regions"] }
#tui-realm-stdlib = "3.0.0"
tui-realm-stdlib = { path = "../../tui-realm-stdlib" }
tuirealm = "3.1.0"
